springapi/k8s/springbootapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springbootapi-service
spec:
  selector:
    app: springbootapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
