springapi/k8s/springbootapi-ingress.yaml
# This file defines an Ingress resource for the Spring Boot API application.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springbootapi-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: springbootapiapp.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: springbootapi-service
            port: 
              number: 80
